--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "reactstrap": "^8.4.1",
+    "recharts": "^2.10.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.32",
