--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.32",
-    "web-vitals": "^2.1.4",
-    "proxy":"http://localhost:8090"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
