--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^4.4.1",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-logger": "^1.1.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
