--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-logger": "^1.1.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
